style: Fix gallery overflow

--- a/main.css
+++ b/main.css
@@ -340,8 +340,8 @@ html, body {
   height: 100vh;
 }
 .m-p-g__thumbs {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 
